syntax = "proto3";

package grpc;

option go_package = "grpc/proto";

message AddURLRequest {
  string fullurl = 1;
}

message Error {
  string code = 1;
  string description = 2;
}

message AddURLResponse {
  string shurl = 1;
  Error error = 2;
} 

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterUserResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message GetURLRequest {
  string key = 1;
}

message GetURLResponse {
  string original_url = 1;
  Error error = 2;
}

message DeleteUserURLsRequest {
  repeated string urls = 1;
}

message DeleteUserURLsResponse {
  string key = 1;
}

service URLService {
  rpc ShortenURL(AddURLRequest) returns (AddURLResponse);  
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse); 
  rpc GetFullURL(GetURLRequest) returns (GetURLResponse);
  rpc DeleteUserURLs(DeleteUserURLsRequest) returns (DeleteUserURLsResponse);
}